# CompuTradePython

./: MANIFEST.in  README.md  setup.cfg  setup.py
CompuTrade/: BuildAlgorithm.py  __init__.py  template.txt
CompuTrade.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
api/: .flaskenv  Pipfile  api.py  config.py  createDB.py  database.db
src/: buildAlgorithm
tests/: CurrentAlgorithm.py  template.txt  test.py
tests/TestCompuTrade/: __init__.py  _ema.py  tester.py
tests/TestCompuTrade/templates/: index.html
