[metadata]
# replace with your username:
name = CompuTrade-dmuraco3
version = 0.0.3
author = Dylan Muraco
author_email = dylanjmuraco@gmail.com
description = CompuTrade library for algorithmic trading
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data=True
url = https://github.com/dmuraco3/CompuTradePython
project_urls =
    Bug Tracker = https://github.com/dmuraco3/CompuTradePython/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: APACHE-2.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6